--- a/styles/reset.css
+++ b/styles/reset.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  font-size: clamp(1rem, 0.75rem + 1.5vw, 2rem);
+  font-size: calc(0.75rem + 1.5vw);
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
