--- a/styles/form-section.css
+++ b/styles/form-section.css
@@ -50,18 +50,36 @@ label {
   display: block;
 
   font-size: calc(0.15rem + 0.5vw);
-  font-weight: 600;
+  font-weight: 700;
   letter-spacing: 0.1rem;
 }
 
 input {
   width: 17vw;
-  padding: 0.1rem 0.3rem;
-  border-radius: 0.1rem;
+  padding: 0.1rem 0.5rem;
+  border-radius: 0.2rem;
 
   font-size: calc(0.5rem + 0.5vw);
 
   border: 1px solid #f0f0f0;
+}
+
+input:focus {
+  border: 1px solid #242ca8;
+}
+
+input:user-invalid {
+  border: 1px solid #ff5858;
+}
+
+input:user-invalid + small:after {
+  display: block;
+
+  font-size: calc(0.25rem + 0.4vw);
+  font-weight: 600;
+  color: #f31f1f;
+
+  content: attr(data-help);
 }
 
 fieldset + div {
